<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AudioCapture</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Recording">Android Audio Recording Application</string>
    <string name="start">start</string>    <string name="stop">stop</string>
    <string name="play">play</string>
    <string name="start_timer">00:00:00</string>
    <string name="location_item">Location Item</string>
    <string name="search_here">search here</string>
    <string name="enter_word">enter word</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="xem_danh_sach">Xem danh sach</string>
    <string name="danh_sach">Danh Sach</string>
    <string name="facebook_app_id">1318182298247558</string>
</resources>
