<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ListView
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listRecordView"
        android:background="@color/colorPrimary"
        android:visibility="gone"
        android:layout_above="@+id/backtomain">
        </ListView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:id="@+id/componentLayout"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/listRecordView"
        android:layout_toEndOf="@+id/listRecordView">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/Recording"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <!-- <ImageView
             android:id="@+id/imageView1"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_below="@+id/textView1"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="37dp"
             android:scaleType="fitXY"
             android:src="@android:drawable/presence_audio_online" />-->

        <!--android:onClick="start"-->
        <Button
            android:id="@+id/start"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@android:drawable/presence_audio_online"
            android:layout_below="@+id/tv_error_filename"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/timer"
            android:layout_below="@+id/start"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_timer"
            android:textSize="20dp"
            />
        <Button
            android:id="@+id/stop"
            android:layout_width="@dimen/action_button_min_width"
            android:layout_height="wrap_content"
            android:onClick="stop"
            android:text="@string/stop"
            android:textColor="@color/colorTextButton"
            android:textSize="22dp"
            android:layout_below="@+id/timer"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            />
        <Button
            android:id="@+id/pause"
            android:layout_width="@dimen/action_button_min_width"
            android:layout_height="wrap_content"
            android:onClick="pause"
            android:text="@string/pause"
            android:textColor="@color/colorTextButton"
            android:textSize="22dp"
            android:layout_alignBaseline="@+id/stop"
            android:layout_centerHorizontal="true"
            />
        <Button
            android:id="@+id/resume"
            android:layout_width="@dimen/action_button_min_width"
            android:layout_height="wrap_content"
            android:onClick="resume"
            android:text="@string/resume"
            android:textColor="@color/colorTextButton"
            android:textSize="22dp"
            android:layout_alignBaseline="@+id/stop"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            />
        <Button
            android:id="@+id/stopnosave"

            android:layout_width="@dimen/action_button_min_width"
            android:layout_height="wrap_content"
            android:onClick="play"
            android:text="Stop no Save"
            android:textColor="@color/colorTextButton"
            android:textSize="22dp"
            android:layout_alignBaseline="@+id/pause"
            android:layout_alignParentRight="true"
            />
        <Button
            android:id="@+id/list"

            android:layout_width="@dimen/action_button_min_width"
            android:layout_height="wrap_content"
            android:onClick="selectinlist"
            android:text="@string/danh_sach"
            android:textColor="@color/colorTextButton"
            android:textSize="22dp"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/pause"
            android:layout_alignStart="@+id/pause" />
        <EditText
            android:id="@+id/et_filename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Type File Name"
            android:textAlignment="center"
            android:textSize="22dp"
            android:layout_below="@+id/textView1"
            />
        <TextView
            android:id="@+id/tv_error_filename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:textColor="@color/colorAccent"
            android:text="File has existed. Please Change"
            android:layout_below="@+id/et_filename"
            android:layout_toRightOf="@+id/resume"
            android:layout_toEndOf="@+id/resume"
            android:visibility="gone"/>

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="BACK"
        android:textColor="@color/colorTextButton"
        android:textSize="22dp"
        android:id="@+id/backtomain"
        android:onClick="backtomain"
        android:visibility="gone"/>


    <Button
        android:id="@+id/facebook_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="FaceBook"
        android:textColor="@color/colorTextButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="shareface"
        android:visibility="gone"
        />

    <com.facebook.share.widget.SendButton
        android:id="@+id/fb_send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sharebymessage"
        android:text="FaceBook"
        android:textColor="@color/colorTextButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="gone"/>

</RelativeLayout>